--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/plugin/PluginPage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/plugin/PluginPage.html
@@ -7,7 +7,7 @@
         <div class="pluginContent">
             <div class="pluginHeader">Eclipse Plugin</div>
             <div class="pluginText">
-                <a href="http://kenai.com/projects/mystic-apps/sources/mystic-apps/show/MysticPasteEclipsePlugin/build/plugins">Download Now</a><br/><br/>
+                <a href="http://github.com/kinabalu/mysticpaste/tree/master/eclipse-plugin/build/plugins/">Download Now</a><br/><br/>
                 Locate where on your file system Eclipse is installed. Under this directory there should be a "dropins"
                 folder, this is where the jar you built (or downloaded) for the plugin should reside.<br/>
                 Restart Eclipse, and voila!<br/>
@@ -21,7 +21,7 @@
         <div class="pluginContent">
             <div class="pluginHeader">IDEA Plugin</div>
             <div class="pluginText">
-                <a href="http://kenai.com/projects/mystic-apps/sources/mystic-apps/show/MysticPasteIDEAPlugin/build">Download Now</a><br/><br/>
+                <a href="http://github.com/kinabalu/mysticpaste/tree/master/idea-plugin/build/">Download Now</a><br/><br/>
 
                 <strong>To install the MysticPaste Plugin for IDEA:</strong>
 
@@ -37,7 +37,7 @@
         <div class="pluginContent">
             <div class="pluginHeader">VIM Plugin</div>
             <div class="pluginText">
-                <a href="http://kenai.com/projects/mystic-apps/sources/mystic-apps/show/MysticPasteVIMPlugin/build">Download Now</a><br/><br/>
+                <a href="http://github.com/kinabalu/mysticpaste/tree/master/vim-plugin/build/">Download Now</a><br/><br/>
 
                 Mystic worked with <a href="http://www.eugeneciurana.com" target="_blank">Eugene Ciurana</a> on a configuration of MysticPaste for his
                 newly written VIM plugin.  Thanks Eugene!
@@ -57,7 +57,7 @@
         <div class="pluginContent">
             <div class="pluginHeader">Netbeans Plugin</div>
             <div class="pluginText">
-                <a href="http://kenai.com/projects/mystic-apps/sources/mystic-apps/show/MysticPasteNetbeansPlugin/build">Download Now</a><br/><br/>
+                <a href="http://github.com/kinabalu/mysticpaste/tree/master/netbeans-plugin/build/">Download Now</a><br/><br/>
 
                 The MysticPaste Netbeans plugin was developed by <a href="http://blank.jasonwhaley.com" target="_blank">Jason Whaley</a> and is compatible with Netbeans 6.5.
                 <br /><br />
@@ -71,6 +71,27 @@
                 </ol>
 
                 Now, when working in an editor, "Copy to Mystic Paste" is available in the global Edit menu.
+
+            </div>
+        </div>
+
+        <div class="pluginContent">
+            <div class="pluginHeader">AppleScript Launchbar Plugin</div>
+            <div class="pluginText">
+                <a href="http://kenai.com/projects/mystic-apps/sources/mystic-apps/show/MysticPasteNetbeansPlugin/build">Download Now</a><br/><br/>
+
+                The launchbar plugin was designed to grab any text via Instant Send or contained within the clipboard and running the applescript will automatically paste
+                the contents to MysticPaste.com and give you the full URL in the clipboard and select it with Launchbar.
+
+                <br /><br />
+                <strong>To install and use the MysticPaste Plugin for Launchbar:</strong>
+                <ol>
+                    <li>Download the Launchbar plugin</li>
+                    <li>Copy the Applescript to ~/Library/Application Support/LaunchBar/Actions</li>
+                    <li>Select some text and add to clipboard</li>
+                    <li>Type in "Mystic Paste" and hit &lt;enter&gt;</li>
+                    <li>See the URL show up in launchbar and also contained within your clipboard for easy pasting</li>
+                </ol>
 
             </div>
         </div>
