--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/BasePage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/BasePage.html
@@ -31,6 +31,7 @@
           <li wicket:id="newLinkContainer" class="cat-item"><a wicket:id="newLink" accesskey="n" href="#" title="New Paste">New</a></li>
           <li wicket:id="historyLinkContainer" class="cat-item"><a wicket:id="historyLink" accesskey="h" href="#" title="View Paste History">History</a></li>
           <li wicket:id="pluginLinkContainer" class="cat-item"><a wicket:id="pluginLink" href="#" title="Plugins">Plugins</a></li>
+          <li class="cat-item"><a wicket:id="sourceLink" title="Source Code" target="_blank">Get Source</a></li>
           <li><a class="lastmenu" href="javascript: return false;"> </a></li>
         </ul>
       </div>
