--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/paste/PasteItemPage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/paste/PasteItemPage.html
@@ -40,7 +40,8 @@
     </div>
 -->
     <div id="paste_submit">
-        <input type="submit" wicket:id="paste" accesskey="p" value="Paste" /></div>
+        <input type="submit" wicket:id="paste" accesskey="p" value="Paste" />
+    </div>
     </form>
 </wicket:extend>
 </html>
