--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/plugin/PluginPage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/plugin/PluginPage.html
@@ -78,7 +78,7 @@
         <div class="pluginContent">
             <div class="pluginHeader">AppleScript Launchbar Plugin</div>
             <div class="pluginText">
-                <a href="http://kenai.com/projects/mystic-apps/sources/mystic-apps/show/MysticPasteNetbeansPlugin/build">Download Now</a><br/><br/>
+                <a href="http://github.com/kinabalu/mysticpaste/tree/master/applescript-plugin/">Download Now</a><br/><br/>
 
                 The launchbar plugin was designed to grab any text via Instant Send or contained within the clipboard and running the applescript will automatically paste
                 the contents to MysticPaste.com and give you the full URL in the clipboard and select it with Launchbar.
