working version with 1.5

--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/BasePage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/BasePage.html
@@ -9,7 +9,7 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Mystic Paste</title>
+    <title wicket:id="title">Mystic Paste</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <!--[if IE]>
       <link rel="stylesheet" type="text/css" href="css/ie.css" />
@@ -44,7 +44,7 @@
       <div class="clear"></div>
 
       <!-- footer -->
-        <div id="copyright">Copyright &copy; 2000-2009 Mystic Coders, LLC</div>
+        <div id="copyright">Copyright &copy; 2000 - <wicket:container wicket:id="latestYear">[latestYear]</wicket:container> Mystic Coders, LLC</div>
         <div id="poweredby_footer">
             Powered By
             <a href="http://www.mysticcoders.com"><img src="images/powered-by-mystic.gif" alt="Powered by Mystic" border="0"/></a>
