pushing up all the new highlighter files

--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/paste/PasteItemPage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/paste/PasteItemPage.html
@@ -35,7 +35,9 @@
     </div>
 -->
     <div class="prepend-9 span-15 last" id="paste_submit">
-        <input type="submit" wicket:id="paste" accesskey="p" value="Paste" />
+        <button wicket:id="paste" class="button positive">
+            <img wicket:id="image" alt="Paste" /> <span wicket:id="imageLabel">[imageLabel]</span>
+        </button>
     </div>
     </form>
 </wicket:extend>
