--- a/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/history/HistoryPage.html
+++ b/web/src/main/resources/com/mysticcoders/mysticpaste/web/pages/history/HistoryPage.html
@@ -14,7 +14,7 @@
     </div>
 
 
-        <wicket:container wicket:id="historyContainer">
+        <span wicket:id="historyContainer">
                 <div wicket:id="history" class="block">
                     <div class="block_head">
                         <div class="bheadl"></div>
@@ -34,7 +34,7 @@
                     <div class="bendl"></div>
                     <div class="bendr"></div>
                 </div>
-        </wicket:container>
+        </span>
 
         <wicket:enclosure>
             <div wicket:id="noPastesFound" style="font-size: 42px; color: #bbb; top:50%;left:5%;width:90%;line-height:2em;margin-top:-1em;text-align:center;position:absolute;">[noPastesFound]</div>
