moved all the .html files next to the .java files instead of in the resources/ subdir

--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/BasePage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/BasePage.html
@@ -52,7 +52,7 @@
                 <div class="hdrl"></div>
                 <div class="hdrr"></div>
 
-                <h1><a href="#">Mystic Paste</a></h1>
+                <h1><a href="BasePage.html#">Mystic Paste</a></h1>
 
                 <ul id="nav">
                     <li wicket:id="newLinkContainer"><a wicket:id="newLink" title="New Paste">New</a></li>
