--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/history/HistoryPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/history/HistoryPage.html
@@ -7,7 +7,7 @@
 
             <h2>Pastes</h2>
 
-            <div class="pagination right"><div wicket:id="pageNav" class="pageNav"><a href="#">Previous</a><a href="#">1</a><a href="#">2</a><a href="#">Next</a></div></div>
+            <div class="pagination right"><div wicket:id="pageNav" class="pageNav"><a href="HistoryPage.html#">Previous</a><a href="HistoryPage.html#">1</a><a href="HistoryPage.html#">2</a><a href="HistoryPage.html#">Next</a></div></div>
          </div>
         <div class="bendl"></div>
         <div class="bendr"></div>
@@ -43,7 +43,7 @@
         <div class="historyItem">
             <div class="view">
               <div class="historyItemHeader">
-                <div class="historyItemView"><a href="#">View Paste</a></div><div class="historyItemLines">(27 lines)</div><div class="historyItemTime">1 hour ago</div>
+                <div class="historyItemView"><a href="HistoryPage.html#">View Paste</a></div><div class="historyItemLines">(27 lines)</div><div class="historyItemTime">1 hour ago</div>
               </div>
               <div class="historyItemHeaderBottom"> </div>
               <div><pre>asdfl;kajsdf; a;sldkfj a;lskdjf</pre></div>
@@ -56,7 +56,7 @@
                 <div class="bheadl"></div>
                 <div class="bheadr"></div>
 
-                <div class="pagination right"><div wicket:id="pageNav2" class="pageNav"><a href="#">Previous</a><a href="#">1</a><a href="#">2</a><a href="#">Next</a></div></div>
+                <div class="pagination right"><div wicket:id="pageNav2" class="pageNav"><a href="HistoryPage.html#">Previous</a><a href="HistoryPage.html#">1</a><a href="HistoryPage.html#">2</a><a href="HistoryPage.html#">Next</a></div></div>
             </div>
 
             <div class="bendl"></div>
