--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/history/HistoryPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/history/HistoryPage.html
@@ -56,7 +56,9 @@
                 <div class="bheadl"></div>
                 <div class="bheadr"></div>
 
-                <div class="pagination right"><div wicket:id="pageNav2" class="pageNav"><a href="HistoryPage.html#">Previous</a><a href="HistoryPage.html#">1</a><a href="HistoryPage.html#">2</a><a href="HistoryPage.html#">Next</a></div></div>
+                <div class="pagination right">
+                    <a wicket:id="nextPageLink">Next Page</a>
+                    <div wicket:id="pageNav2" class="pageNav"><a href="HistoryPage.html#">Previous</a><a href="HistoryPage.html#">1</a><a href="HistoryPage.html#">2</a><a href="HistoryPage.html#">Next</a></div></div>
             </div>
 
             <div class="bendl"></div>
