--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/BasePage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/BasePage.html
@@ -1,89 +1,33 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
-
-
+<!DOCTYPE html>
+<html wicket:id="html" xmlns:wicket="http://wicket.apache.org">
 <head>
 
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta charset="utf-8" />
+    <title wicket:id="title">Mystic Paste</title>
+    <meta wicket:id="viewport" />
+    <meta wicket:id="description" />
+    <meta wicket:id="author" />
+    <meta wicket:id="chrome-frame" />
 
-	<title wicket:id="title">Mystic Paste</title>
-
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/jquery.wysiwyg.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/facebox.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/visualize.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/date_input.css" rel="stylesheet" type="text/css" />
-
-<!--
-    <style type="text/css" media="all">
-		@import url("assets/css/style.css");
-		@import url("assets/css/jquery.wysiwyg.css");
-		@import url("assets/css/facebox.css");
-		@import url("assets/css/visualize.css");
-		@import url("assets/css/date_input.css");
-    </style>
--->
-
-	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
-	<!--[if lt IE 8]><style type="text/css" media="all">@import url("assets/css/ie.css");</style><![endif]-->
-	<!--[if IE]><script type="text/javascript" src="assets/js/excanvas.js"></script><![endif]-->
-
-	<script type="text/javascript" src="assets/js/jquery.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.img.preload.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.filestyle.mini.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.wysiwyg.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.date_input.pack.js"></script>
-	<script type="text/javascript" src="assets/js/facebox.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.visualize.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.select_skin.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.tablesorter.min.js"></script>
-	<script type="text/javascript" src="assets/js/ajaxupload.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.pngfix.js"></script>
-	<script type="text/javascript" src="assets/js/custom.js"></script>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".subnav">
 
-    <div id="hld">
-        <div class="wrapper">       <!-- wrapper begins -->
+    <div wicket:id="navbar"></div>
+    <div class="container">
 
-            <div id="header">
-                <div class="hdrl"></div>
-                <div class="hdrr"></div>
+        <wicket:child/>
 
-                <h1><a href="#">Mystic Paste</a></h1>
+    </div>
 
-                <ul id="nav">
-                    <li wicket:id="newLinkContainer"><a wicket:id="newLink" title="New Paste">New</a></li>
-                    <li wicket:id="historyLinkContainer"><a wicket:id="historyLink" title="View Paste History">History</a></li>
-                    <li wicket:id="pluginLinkContainer"><a wicket:id="pluginLink" title="Plugins">Plugins</a></li>
-                    <li wicket:id="helpLinkContainer"><a wicket:id="helpLink" title="Help">Help</a></li>
-                    <li><a wicket:id="sourceLink" title="Source Code">Get Source</a></li>
-                    <li><a wicket:id="blogLink" title="Mystic Blog">Blog</a></li>
-                </ul>
-
-            </div>      <!-- #header ends -->
-
-
-
-      <wicket:child/>
-
-      <!-- footer -->
-      <div id="footer">
-        <p class="left">Copyright &copy; 2000 - <wicket:container wicket:id="latestYear">[latestYear]</wicket:container> Mystic Coders, LLC</p>
-        <p class="right">
-            Powered By
-            <a href="http://www.mysticcoders.com"><img src="images/powered-by-mystic.gif" alt="Powered by Mystic" border="0"/></a>
-        </p>
-      </div>
+        <wicket:panel wicket:id="footer"></wicket:panel>
 
 
     <span wicket:id="ga-js">[ga-js]</span>
-
-    </div>
-
-    </div>
-
   </body>
 </html>
