--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/paste/PasteItemPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/paste/PasteItemPage.html
@@ -1,45 +1,141 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:extend>
 
-    <div class="block">
+    <div class="container">
         <form wicket:id="pasteForm">
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
-
-            <h2>Paste Options</h2>
-
-            <ul class="tabs">
-                <li>language: <select wicket:id="type" class="language"><option>Choose One</option><option>Java</option><option>Groovy</option><option>PHP</option></select></li>
-            </ul>
-        </div>
-
-        <div class="block_content">
-<!--
-            <div class="message errormsg" id="feedbackPanel">
+            <div class="row" style="margin-top: 20px;">
+                <div class="span4 hide" id="imageAttached">
+                    <button class="btn btn-success" type="button" onclick="$('#imageUploadedModal').modal()"><i class="icon-file icon-white"></i> Image Attached</button>
+                </div>
+              <div class="pull-right">
+                  <select wicket:id="type" class="language"><option>Choose One</option><option>Java</option><option>Groovy</option><option>PHP</option></select>
+              </div>
             </div>
--->
-          <span wicket:id="feedback">[feedback]</span>
 
-            <div id="paste_content">
+            <div wicket:id="feedbackContainer" class="alert alert-error">
+                <span wicket:id="feedback">[feedback]</span>
+            </div>
+            <div class="row">
                 <textarea wicket:id="content" wrap="off" rows="35" style="width: 100%; height: 100%;" width="95%"></textarea>
 
                 <span style="display: none; visibility: hidden;"><input wicket:id="email" /></span>
-
-                <p></p>
-                <hr />
-                <p class="right" align="right">
-                    <input type="submit" wicket:id="privatePaste" class="submit long_blue" value="Create Private Paste" />
-                    <input type="submit" wicket:id="paste" class="submit long" value="Create Public Paste" />
-                </p>
-
-
             </div>
-        </div>
+
+            <div class="row">
+                  <div class="pull-right">
+                      <input type="submit" wicket:id="privatePaste" class="btn btn-inverse" value="Create Private Paste" />
+                      <input type="submit" wicket:id="paste" class="btn" value="Create Public Paste" />
+                  </div>
+            </div>
+
+            <input type="hidden" id="imageLocation" wicket:id="imageLocation" name="imageLocation" />
         </form>
 
-        <div class="bendl"></div>
-        <div class="bendr"></div>
     </div>
+
+<!-- So here is the magic -->
+<script>
+
+    var opts = {
+      lines: 13, // The number of lines to draw
+      length: 7, // The length of each line
+      width: 4, // The line thickness
+      radius: 10, // The radius of the inner circle
+      corners: 1, // Corner roundness (0..1)
+      rotate: 0, // The rotation offset
+      color: '#000', // #rgb or #rrggbb
+      speed: 1, // Rounds per second
+      trail: 60, // Afterglow percentage
+      shadow: false, // Whether to render a shadow
+      hwaccel: false, // Whether to use hardware acceleration
+      className: 'spinner', // The CSS class to assign to the spinner
+      zIndex: 2e9, // The z-index (defaults to 2000000000)
+      top: 'auto', // Top position relative to parent in px
+      left: 'auto' // Left position relative to parent in px
+    };
+
+    var spinner = new Spinner(opts);
+
+    /* Drag'n drop stuff */
+    window.ondragover = function(e) {
+        e.preventDefault();
+        document.getElementById('content').style.backgroundColor = '#aaa';
+    }
+    window.ondrop = function(e) {
+        e.preventDefault();
+        document.getElementById('content').style.backgroundColor = '#fff';
+        upload(e.dataTransfer.files[0]);
+    }
+    window.ondragleave = function(e) {
+        e.preventDefault();
+        document.getElementById('content').style.backgroundColor = '#fff';
+    }
+    function upload(file) {
+
+        if(window.localStorage.getItem('upload')) {
+            delta = ((new Date()).getTime() - (new Date()).setTime(window.localStorage.getItem('timestamp'))) / 1000;
+            if(delta < 100) return;
+        }
+
+        /* Is the file an image? */
+        if (!file || !file.type.match(/image.*/)) return;
+
+        $('#uploadingImageModal').modal();
+        var target = document.getElementById('spinme');
+        spinner.spin(target);
+
+        /* Lets build a FormData object*/
+        var fd = new FormData(); // I wrote about it: https://hacks.mozilla.org/2011/01/how-to-develop-a-html5-image-uploader/
+        fd.append("image", file); // Append the file
+        fd.append("key", "2ae4a95ba09f5cd2bfd30c35d5c0e9ad"); // Get your own key http://api.imgur.com/
+        var xhr = new XMLHttpRequest(); // Create the XHR (Cross-Domain XHR FTW!!!) Thank you sooooo much imgur.com
+        xhr.open("POST", "http://api.imgur.com/2/upload.json"); // Boooom!
+        xhr.onload = function() {
+            // Big win!
+            parsed_json = JSON.parse(xhr.responseText)
+            document.getElementById("imageLocation").value = parsed_json.upload.links.imgur_page;
+            document.getElementById("previewImage").src = parsed_json.upload.links.large_thumbnail;
+            document.getElementById("imageAttached").setAttribute('class', 'span4')
+
+            window.localStorage.setItem('timestamp', (new Date()).getTime());
+            window.localStorage.setItem('upload', parsed_json.upload.links.imgur_page)
+            $('#uploadingImageModal').modal('hide');
+            spinner.stop();
+        }
+        /* And now, we send the formdata */
+        xhr.send(fd);
+    }
+</script>
+<style>
+    #link {display: none}
+</style>
+
+<!-- Modal -->
+<div id="uploadingImageModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="uploadingImageLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">?</button>
+    <h3 id="uploadingImageLabel">Uploading Image</h3>
+    </div>
+    <div class="modal-body">
+        <p>Uploading image...</p>
+        <div id="spinme"></div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div id="imageUploadedModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">?</button>
+    <h3 id="myModalLabel">Image Uploaded</h3>
+    </div>
+    <div class="modal-body">
+        <img id="previewImage" border="0" />
+    </div>
+    <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
+</div>
+
 </wicket:extend>
 </html>
