--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/plugin/PluginPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/plugin/PluginPage.html
@@ -1,151 +1,120 @@
+<!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+<head>
+    <meta charset="utf-8" />
+    <title>Plugins</title>
+</head>
+<body>
 <wicket:extend>
-    <div class="block">
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
-
-            <h2>Eclipse Plugin</h2>
-
-            <ul class="tabs">
-                <li><a href="http://github.com/kinabalu/mysticpaste/tree/master/eclipse-plugin/build/plugins/">Download Now</a></li>
-            </ul>
-
+    <header class="subhead">
+        <div class="container">
+            <h1>Plugins</h1>
+            <p class="lead">Use pastebin in your IDE</p>
         </div>
-        <div class="block_content">
+    </header>
+
+    <div class="container">
+
+        <div class="tabbable"> <!-- Only required for left/right tabs -->
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#eclipse-tab" data-toggle="tab">Eclipse</a></li>
+            <li><a href="#idea-tab" data-toggle="tab">IDEA</a></li>
+            <li><a href="#vim-tab" data-toggle="tab">VIM</a></li>
+            <li><a href="#netbeans-tab" data-toggle="tab">NetBeans</a></li>
+            <li><a href="#applescript-tab" data-toggle="tab">Applescript</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <div class="tab-pane active" id="eclipse-tab">
+                <h2>Eclipse Plugin</h2>
+
+                <p>
                 Locate where on your file system Eclipse is installed. Under this directory there should be a "dropins"
-                folder, this is where the jar you built (or downloaded) for the plugin should reside.<br/>
-                Restart Eclipse, and voila!<br/>
-                <br/>
+                folder, this is where the jar you built (or downloaded) for the plugin should reside.
+                Restart Eclipse, and voila!
+
                 Note: on a Mac, you'll have to right click on Eclipse.app and choose "Show Package Contents", the
                 dropins folder will then be accessible through the Finder window which pops up.
+                </p>
+                <a href="http://github.com/kinabalu/mysticpaste/tree/master/eclipse-plugin/build/plugins/" class="btn btn-primary btn-large">Download Now</a>
+
+            </div>
+            <div class="tab-pane" id="idea-tab">
+
+                <h2>IDEA Plugin</h2>
+                    <strong>To install the MysticPaste Plugin for IDEA:</strong>
+
+                    <ul>
+                        <li>Windows: C:\Documents and Settings\&lt;username&gt;\.IntelliJIdea80\config\plugins</li>
+                        <li>OS X: $HOME/Library/Application Support/IntelliJIDEA80</li>
+                        <li>Linux/Unix: $HOME/.IntelliJIdea80/config/plugins</li>
+                    </ul>
+                <a href="http://github.com/kinabalu/mysticpaste/tree/master/idea-plugin/build/" class="btn btn-primary btn-large">Download Now</a>
+            </div>
+              <div class="tab-pane" id="vim-tab">
+
+                  <h2>VIM Plugin</h2>
+                  <p>
+                      Mystic worked with <a href="http://www.eugeneciurana.com" target="_blank">Eugene Ciurana</a> on a configuration of MysticPaste for his
+                      newly written VIM plugin.  Thanks Eugene!
+
+                      <br /><br />
+
+                      <strong>To install the MysticPaste Plugin for VIM:</strong>
+
+                      <ul>
+                          <li>OS X or Linux: unzip the archive in ~/.vim ; vi ; :helptags ~/.vim/doc</li>
+                          <li>Windows: Same as above, but find the location of vim/gvim's configuration directory (none of us use Windows)</li>
+                      </ul>
+                  </p>
+                  <a href="http://github.com/kinabalu/mysticpaste/tree/master/vim-plugin/build/" class="btn btn-primary btn-large">Download Now</a>
+              </div>
+              <div class="tab-pane" id="netbeans-tab">
+
+                  <h2>Netbeans Plugin</h2>
+                  <p>
+                      The MysticPaste Netbeans plugin was developed by <a href="http://blank.jasonwhaley.com" target="_blank">Jason Whaley</a> and is compatible with Netbeans 6.5.
+                      <br /><br />
+                      <strong>To install the MysticPaste Plugin for Netbeans:</strong>
+                      <ol>
+                          <li>In Netbeans, click Tools -> Plugins</li>
+                          <li>Select the Downloaded tab</li>
+                          <li>Click Add Plugins</li>
+                          <li>Find and select the downloaded .nbm file</li>
+                          <li>Make sure MysticPaste is selected and click Install</li>
+                      </ol>
+
+                      Now, when working in an editor, "Copy to Mystic Paste" is available in the global Edit menu.
+                  </p>
+
+                  <a href="http://github.com/kinabalu/mysticpaste/tree/master/netbeans-plugin/build/" class="btn btn-primary btn-large">Download Now</a>
+
+              </div>
+              <div class="tab-pane" id="applescript-tab">
+
+                  <h2>Applescript Launchbar Plugin</h2>
+
+                  <p>
+                      The launchbar plugin was designed to grab any text via Instant Send or contained within the clipboard and running the applescript will automatically paste
+                      the contents to MysticPaste.com and give you the full URL in the clipboard and select it with Launchbar.
+
+                      <br /><br />
+                      <strong>To install and use the MysticPaste Plugin for Launchbar:</strong>
+                      <ol>
+                          <li>Download the Launchbar plugin</li>
+                          <li>Copy the Applescript to ~/Library/Application Support/LaunchBar/Actions</li>
+                          <li>Select some text and add to clipboard</li>
+                          <li>Type in "Mystic Paste" and hit &lt;enter&gt;</li>
+                          <li>See the URL show up in launchbar and also contained within your clipboard for easy pasting</li>
+                      </ol>
+                  </p>
+                  <a href="http://github.com/kinabalu/mysticpaste/tree/master/applescript-plugin/" class="btn btn-primary btn-large">Download Now</a>
+
+              </div>
+          </div>
         </div>
-
-        <div class="bendl"></div>
-        <div class="bendr"></div>
-    </div>
-
-    <div class="block">
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
-
-            <h2>IDEA Plugin</h2>
-
-            <ul class="tabs">
-                <li><a href="http://github.com/kinabalu/mysticpaste/tree/master/idea-plugin/build/">Download Now</a></li>
-            </ul>
-
-        </div>
-        <div class="block_content">
-
-                <strong>To install the MysticPaste Plugin for IDEA:</strong>
-
-                <ul>
-                    <li>Windows: C:\Documents and Settings\&lt;username&gt;\.IntelliJIdea80\config\plugins</li>
-                    <li>OS X: $HOME/Library/Application Support/IntelliJIDEA80</li>
-                    <li>Linux/Unix: $HOME/.IntelliJIdea80/config/plugins</li>
-                </ul>
-
-        </div>
-
-        <div class="bendl"></div>
-        <div class="bendr"></div>
-    </div>
-
-    <div class="block">
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
-
-            <h2>VIM Plugin</h2>
-
-            <ul class="tabs">
-                <li><a href="http://github.com/kinabalu/mysticpaste/tree/master/vim-plugin/build/">Download Now</a></li>
-            </ul>
-
-        </div>
-        <div class="block_content">
-
-                Mystic worked with <a href="http://www.eugeneciurana.com" target="_blank">Eugene Ciurana</a> on a configuration of MysticPaste for his
-                newly written VIM plugin.  Thanks Eugene!
-
-                <br /><br />
-
-                <strong>To install the MysticPaste Plugin for VIM:</strong>
-
-                <ul>
-                    <li>OS X or Linux: unzip the archive in ~/.vim ; vi ; :helptags ~/.vim/doc</li>
-                    <li>Windows: Same as above, but find the location of vim/gvim's configuration directory (none of us use Windows)</li>
-                </ul>
-
-        </div>
-        <div class="bendl"></div>
-        <div class="bendr"></div>
-    </div>
-
-    <div class="block">
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
-
-            <h2>Netbeans Plugin</h2>
-
-            <ul class="tabs">
-                <li><a href="http://github.com/kinabalu/mysticpaste/tree/master/netbeans-plugin/build/">Download Now</a></li>
-            </ul>
-
-        </div>
-        <div class="block_content">
-
-                The MysticPaste Netbeans plugin was developed by <a href="http://blank.jasonwhaley.com" target="_blank">Jason Whaley</a> and is compatible with Netbeans 6.5.
-                <br /><br />
-                <strong>To install the MysticPaste Plugin for Netbeans:</strong>
-                <ol>
-                    <li>In Netbeans, click Tools -> Plugins</li>
-                    <li>Select the Downloaded tab</li>
-                    <li>Click Add Plugins</li>
-                    <li>Find and select the downloaded .nbm file</li>
-                    <li>Make sure MysticPaste is selected and click Install</li>
-                </ol>
-
-                Now, when working in an editor, "Copy to Mystic Paste" is available in the global Edit menu.
-
-        </div>
-        <div class="bendl"></div>
-        <div class="bendr"></div>
-    </div>
-
-    <div class="block">
-        <div class="block_head">
-            <div class="bheadl"></div>
-            <div class="bheadr"></div>
-
-            <h2>Applescript Launchbar Plugin</h2>
-
-            <ul class="tabs">
-                <li><a href="http://github.com/kinabalu/mysticpaste/tree/master/applescript-plugin/">Download Now</a></li>
-            </ul>
-        </div>
-        <div class="block_content">
-
-                The launchbar plugin was designed to grab any text via Instant Send or contained within the clipboard and running the applescript will automatically paste
-                the contents to MysticPaste.com and give you the full URL in the clipboard and select it with Launchbar.
-
-                <br /><br />
-                <strong>To install and use the MysticPaste Plugin for Launchbar:</strong>
-                <ol>
-                    <li>Download the Launchbar plugin</li>
-                    <li>Copy the Applescript to ~/Library/Application Support/LaunchBar/Actions</li>
-                    <li>Select some text and add to clipboard</li>
-                    <li>Type in "Mystic Paste" and hit &lt;enter&gt;</li>
-                    <li>See the URL show up in launchbar and also contained within your clipboard for easy pasting</li>
-                </ol>
-
-        </div>
-        <div class="bendl"></div>
-        <div class="bendr"></div>
     </div>
 
 </wicket:extend>
+</body>
 </html>
