--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/Footer.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/Footer.html
@@ -6,7 +6,7 @@
         <wicket:panel>
             <!-- Footer
             ================================================== -->
-            <footer class="footer">
+            <footer id="footer">
                 <div class="container">
                     <p>Copyright &copy; 2000 - <wicket:container wicket:id="latestYear">[latestYear]</wicket:container> Mystic Coders, LLC</p>
                     <ul class="footer-links">
