some optimizations, like not syntax highlighting history views for speed

--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/admin/OverviewPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/admin/OverviewPage.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="row" style="margin: 0px;">
 
-                      <div style="border: 1px #ccc solid;" wicket:id="content"></div>
+                      <pre style="border: 1px #ccc solid;" wicket:id="content"></pre>
 
                     </div>
                 </section>
