global bind commands working, and now posting forms example works

--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
@@ -88,7 +88,8 @@
                     Utilizing <a href="http://craig.is/killing/mice">mousetrap.js</a> with our Wicket integration library <a href="https://github.com/kinabalu/wicket-mousetrap">wicket-mousetrap</a> we've added a few handy
                     keyboard shortcuts to get you through the pasting process faster: <code>N</code> - new paste,
                     <code>H</code> - history, <code>left</code> or <code>shift+left</code> - previous page or first page,
-                    <code>right</code> or <code>shift+right</code> - next page or last page
+                    <code>right</code> or <code>shift+right</code> - next page or last page,
+                    <code>cmd+enter</code> - submit the paste (yes, even while in the editor)
                 </p>
             </div>
 
