now cmd+enter and alt+enter work with the latest wicket-mousetrap

--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
@@ -89,7 +89,7 @@
                     keyboard shortcuts to get you through the pasting process faster: <code>N</code> - new paste,
                     <code>H</code> - history, <code>left</code> or <code>shift+left</code> - previous page or first page,
                     <code>right</code> or <code>shift+right</code> - next page or last page,
-                    <code>cmd+enter</code> - submit the paste (yes, even while in the editor)
+                    <code>cmd+enter</code> or <code>alt+enter</code> - submit the paste (yes, even while in the editor)
                 </p>
             </div>
 
