refactor to remove reply form and institute a reply keystroke, new help, etc

--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
@@ -89,7 +89,8 @@
                     keyboard shortcuts to get you through the pasting process faster: <code>N</code> - new paste,
                     <code>H</code> - history, <code>left</code> or <code>shift+left</code> - previous page or first page,
                     <code>right</code> or <code>shift+right</code> - next page or last page,
-                    <code>cmd+s</code> or <code>ctrl+s</code> - submit the paste (yes, even while in the editor, and yes, we are ignoring the default)
+                    <code>cmd+s</code> or <code>ctrl+s</code> - submit the paste (yes, even while in the editor, and yes, we are ignoring the default) and
+                    <code>R</code> - for replying to a paste you're viewing
                 </p>
             </div>
 
