legal page added

--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/Footer.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/Footer.html
@@ -13,6 +13,8 @@
                       <li><a wicket:id="blogLink" href="http://www.mysticcoders.com/blog">Blog</a></li>
                       <li class="muted">&middot;</li>
                       <li><a wicket:id="sourceLink" href="https://github.com/kinabalu/mysticpaste">Source</a></li>
+                      <li class="muted">&middot;</li>
+                      <li><a wicket:id="legalLink" href="#legal">Legal</a></li>
                     </ul>
                 </div>
             </footer>
