fixed error in url

--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/HelpPage.html
@@ -67,7 +67,7 @@
                 work lightning fast.
             </p>
             <p>
-                We have <a href="/plugins">plugins</a> for 5 different development environments so you can paste directly from the editor.
+                We have <a href="/plugin">plugins</a> for 5 different development environments so you can paste directly from the editor.
             </p>
 
             <hr class="featurette-divider" />
