--- a/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/BasePage.html
+++ b/web/src/main/java/com/mysticcoders/mysticpaste/web/pages/BasePage.html
@@ -28,62 +28,8 @@
         </div>
     </div>
 
-
     <!-- Help Modal -->
-    <div id="helpModal" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="helpLabel" aria-hidden="true">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">?</button>
-        <h3 align="center" id="helpLabel">Help</h3>
-        </div>
-        <div class="modal-body">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Keystroke</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td><strong>?</strong></td>
-                    <td>Show Help</td>
-                </tr>
-                <tr>
-                    <td><strong>N</strong></td>
-                    <td>New Paste</td>
-                </tr>
-                <tr>
-                    <td><strong>H</strong></td>
-                    <td>History</td>
-                </tr>
-                <tr>
-                    <td><strong>R</strong></td>
-                    <td>Reply Paste</td>
-                </tr>
-                <tr>
-                    <td><strong>Left</strong></td>
-                    <td>Previous Page</td>
-                </tr>
-                <tr>
-                    <td><strong>Right</strong></td>
-                    <td>Next Page</td>
-                </tr>
-                <tr>
-                    <td><strong>Shift + Left</strong></td>
-                    <td>First Page</td>
-                </tr>
-                <tr>
-                    <td><strong>Shift + Right</strong></td>
-                    <td>Last Page</td>
-                </tr>
-                <tr>
-                    <td><strong>Cmd + S, Ctrl + S</strong></td>
-                    <td>Submit Paste</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <div id="helpModal" wicket:id="helpModal">[helpModal]</div>
 
 
     <wicket:panel wicket:id="footer"></wicket:panel>
